fix: changed start visibility

--- a/dicegame/styles.css
+++ b/dicegame/styles.css
@@ -2,6 +2,7 @@
   width: 30%;
   margin: auto;
   text-align: center;
+  display: none;
   user-select: none;
 }
 
